Fixing the masonry grid on mobile.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@
 }
 
 .my-masonry-grid_column>div {
-    background: yellow;
+    background: white;
     margin-bottom: 30px;
 }
 
